##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_01_TARGET example-02-sync-read)
##########################################################################
add_executable(${EXAMPLE_01_TARGET} example-02-sync-read.cpp)
target_link_libraries(${EXAMPLE_01_TARGET} dynamixel++)
##########################################################################
