##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_03_TARGET example-03-bulk-read)
##########################################################################
add_executable(${EXAMPLE_03_TARGET} example-03-bulk-read.cpp)
target_link_libraries(${EXAMPLE_03_TARGET} dynamixel++)
##########################################################################
