##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_03_TARGET example-03-sync-write)
##########################################################################
add_executable(${EXAMPLE_03_TARGET} example-03-sync-write.cpp)
target_link_libraries(${EXAMPLE_03_TARGET} dynamixel++)
##########################################################################
