##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_04_TARGET example-04-sync-read)
##########################################################################
add_executable(${EXAMPLE_04_TARGET} example-04-sync-read.cpp)
target_link_libraries(${EXAMPLE_04_TARGET} dynamixel++)
##########################################################################
