##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_05_TARGET example-05-write)
##########################################################################
add_executable(${EXAMPLE_05_TARGET} example-05-write.cpp)
target_link_libraries(${EXAMPLE_05_TARGET} dynamixel++)
##########################################################################
