##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_07_TARGET example-07-bulk-write)
##########################################################################
add_executable(${EXAMPLE_07_TARGET} example-07-bulk-write.cpp)
target_link_libraries(${EXAMPLE_07_TARGET} dynamixel++)
##########################################################################
