##########################################################################
cmake_minimum_required(VERSION 3.15)
##########################################################################
set(EXAMPLE_01_TARGET example-minimal)
##########################################################################
add_executable(${EXAMPLE_01_TARGET} example-minimal)
target_link_libraries(${EXAMPLE_01_TARGET} dynamixel++)
##########################################################################
